# GroupProject25-26

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  run_tests.ps1  seed.py  start.ps1
.github/workflows/: main.yml
app/: __init__.py  extensions.py
app/auth/: __init__.py  forms.py  routes.py
app/main/: __init__.py  forms.py  routes.py
app/models/: body_metric.py  recovery.py  user.py  workout.py
app/static/css/: main.css
app/static/js/: chart.js  charts.js
app/templates/: base.html  body_metrics.html  dashboard.html  layout.html
app/templates/auth/: login.html  register.html
app/templates/errors/: 403.html  404.html  429.html  500.html
app/templates/main/: body_metrics.html  dashboard.html  edit_workout.html  metrics.html  profile.html  workouts.html
app/templates/user/: profile.html  settings.html
app/user/: __init__.py  forms.py  routes.py
app/utils/: export_utils.py  recovery_calculations.py
migrations/: env.py
migrations/versions/: 01bd015e71be_initial_postgres_migration.py  35ebc6f8e57d_create_user_table.py  b65c2cee45fb_initial_migration.py  c51abc03a8c7_add_logs.py  e4c0876ff262_initial_migration.py  fe4c3ed9ae33_added_recovery_estimated_column.py
tests/: conftest.py  test_recovery.py  test_recovery_logic.py
tests/integration/: test_api.py  test_auth.py  test_routes.py  test_workout_routes.py
tests/unit/: test_calculations.py  test_models.py
